Lesson 10, calculator that calculates the multiplication and divion of two numbers

--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
   <title>Document</title>
 </head>
 <body>
-    <p id="id1"> sunt primul par.</p>
-    <p> sunt paragraful după codul js.</p>
+  <form name = "calculator">
+    <label>1st Number:</label><br>
+    <input type="text" name="txtnum1"><br>
+    <label>2nd Number:</label><br>
+    <input type="text" name="txtnum2"><br>
+    <input type="button" name="multiply" value="Multiply" onclick="multiplyValues()">
+    <input type="button" name="divide" value="Divide" onclick="divideValues()">
+    <p>The Result Is:</p>
+    <input type="text" name="txtres">
+
+  </form>
 </body>
 <script src="script.js"></script> 
 </html>    
