--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Getting Started with Javascript</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
+  <div class="jumbotron text-center">
+    <h1>This is my site!</h1>
+    <button type="button" class="btn btn-primary" 
+    onclick="changeText()">
+      Change the text
+    </button>
+  </div>
  
+
+
+  <script src="script.js"></script> 
 </body>
-<script src="script.js"></script> 
 </html> 
    
