--- a/index.html
+++ b/index.html
@@ -6,17 +6,25 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Getting Started with Javascript</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div class="jumbotron text-center">
-    <button class="btn btn-danger" onclick="goCooCoo()">
-      Go CooCoo
-    </button>
-  </div>
-  <div class="jumbotron text-center">
-    <button class="btn btn-danger coffee-btn" onclick="goCooCoo">
-      Get Coffee
-    </button>
+  <div class="jumbotron padding">
+    <h2>How much do pies cost?</h2>
+    <form>
+      <div class="form-group">
+        <label for="price">Price</label>
+        <input type="text" class="form-control" name="price" value="20">
+      </div>
+      <div class="form-group">
+        <label for="quantity">
+          Quantity
+          <span class="label label-primary quantity-label">1</span>
+        </label>
+        <input type="range" class="form-control" name="quantity" value="1" min="1" max="10" step="1">
+      </div>
+    </form>
+    <div class="text-right text-giant total"></div>
   </div>
 
   <script src="script.js"></script> 
